--- a/more_stuff.html
+++ b/more_stuff.html
@@ -81,3 +81,112 @@ buttons to sm
         </div>
     </div>
 </nav>
+
+
+<!-- project cards -->
+<!-- TODO: define a template for them
+        fix 2-1 wierdness around m -->
+<div class="parallax__group">
+    <section class="parallax__layer parallax__layer--base container">
+        Project where I mostly coded
+        <div class="row">
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>My bachelor thesis project about conditional probabilities</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/vioSpark/weather-data-analyzer-public">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/color_sample_measurement.jpg"
+                                alt="Yellow color sample">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>A research project where we calculated the difference of the
+                                color between the samples based on spectral performance</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/vioSpark/color_sample_measurements">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>A few cool stuff I've done under my bachelors</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/vioSpark/BME-cool-part">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>A huge C++ project we still haven't cleaned up after the
+                                competition</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/Defragged-Zebra/Ericsson2020">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>And the next project with the same team, this time in python</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/Defragged-Zebra/Bosch2020">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>The time when I nerded out, and made a mathematical model
+                                following a random idea. To be fair I've solved a lot of my
+                                bachelor homeworks with notebooks like this.</p>
+                            <p><a class="button button-primary button-wide-mobile"
+                                    href="https://github.com/vioSpark/lens-system-optimizer">
+                                    code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
