--- a/index.html
+++ b/index.html
@@ -15,11 +15,45 @@
 </head>
 
 <body>
-    <!-- TODO: fix particles and parallax an navbar-->
+    <!-- Navbar WIP-->
+    <nav class="navbar bg-dark navbar-dark fixed-top navbar-expand-lg py-2">
+        <div class="container">
+            <a href="#" class="navbar-brand">Placeholder</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="#personal" class="nav-link">Personal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#projects" class="nav-link">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Who tf is Mark/contact </a>
+                        write intro here + sm links
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+
+
+    <!-- TODO: fix particles and navbar-->
     <!-- The navbar + pt-5 solution wanna make me cry -->
     <div class="parallax">
         <div class="parallax__group">
             <div class="parallax_container">
+
+
+
+
                 <div class="parallax__layer parallax__layer--back">
                     <!-- <div>
                         <div class="hero-particles-container">
@@ -30,6 +64,7 @@
 
 
                 <div class="parallax__layer parallax__layer--base">
+                    
                     <!-- Landing text -->
                     <div class="bg-dark text-light text-center py-5">
                         <h1>Welcome on the website of <span class="text-warning">Mark</span>...</h1>
