--- a/more_stuff.html
+++ b/more_stuff.html
@@ -1,4 +1,4 @@
-buttons to sm
+<!-- buttons to sm -->
 <div class="hero-cta">
     <a class="button button-primary button-wide-mobile" href="https://www.linkedin.com/in/vispark/"><svg
             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
@@ -56,31 +56,6 @@ buttons to sm
     </div>
 </div>
 
-<!-- Navbar WIP-->
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2 fixed-top">
-    <div class="container">
-        <a href="#" class="navbar-brand">Placeholder</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a href="#personal" class="nav-link">Personal</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#projects" class="nav-link">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact" class="nav-link">Who tf is Mark/contact </a>
-                    write intro here + sm links
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 
 
