fixing scroll-reveal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <!-- TODO: fix particles -->
+    <!-- TODO: fix scrollreveal  -->
     <div class="parallax">
         <div class="parallax__group">
             <div class="parallax_container">
@@ -85,7 +85,7 @@
                     <!-- project cards -->
                     <!-- TODO: define a template for them-->
                     <div class="text-light text-center">
-                        Projects where I mostly codeds
+                        Projects where I mostly coded
                         <div class="d-flex bd-highlight mb-3 flex-wrap">
                             <div class="m-2 bd-highlight">
                                 <div class="flip-card">
