--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         </div>
     </nav>
 
-    <!-- TODO: fix scrollreveal  -->
     <div class="parallax">
         <div class="parallax__group">
             <div class="parallax_container">
@@ -57,7 +56,7 @@
                 <div class="parallax__layer parallax__layer--base">
 
                     <!-- Landing text -->
-                    <div class="text-light text-center py-5">
+                    <div class="lead-text text-light text-center py-5">
                         <h1>Welcome on the website of <span class="text-warning">Mark</span>...</h1>
                         <p class="">
                             I'm a graduating data scientist*. Take a look at my projects while I figure out the rest of
