javascript auto card creation done

--- a/index.html
+++ b/index.html
@@ -85,102 +85,8 @@
                     <!-- TODO: define a template for them-->
                     <div class="text-light text-center">
                         Projects where I mostly coded
-                        <div class="d-flex bd-highlight mb-3 flex-wrap">
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>My bachelor thesis project about conditional probabilities</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/vioSpark/weather-data-analyzer-public">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/color_sample_measurement.jpg"
-                                                alt="Yellow color sample">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>A research project where we calculated the difference of the
-                                                color between the samples based on spectral performance</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/vioSpark/color_sample_measurements">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>A few cool stuff I've done under my bachelors</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/vioSpark/BME-cool-part">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>A huge C++ project we still haven't cleaned up after the
-                                                competition</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/Defragged-Zebra/Ericsson2020">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>And the next project with the same team, this time in python</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/Defragged-Zebra/Bosch2020">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>The time when I nerded out, and made a mathematical model
-                                                following a random idea. To be fair I've solved a lot of my
-                                                bachelor homeworks with notebooks like this.</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://github.com/vioSpark/lens-system-optimizer">
-                                                    code</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div id="writing_projects" class="d-flex bd-highlight mb-3 flex-wrap">
+                            <!-- js fills the rest here -->
                         </div>
 
 
@@ -191,54 +97,8 @@
                             apply color scheme (recompile sass?)        -->
 
                         Projects where I read code more than writing
-                        <div class="d-flex bd-highlight mb-3 flex-wrap">
-                            <div class="m-2 bd-highlight">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                            <img class="flip-image" src="src/images/sesn.png" alt="Convolution kernels">
-                                        </div>
-                                        <div class="flip-card-back">
-                                            <p>When we analyzed some dangerously-high-level math concepts to
-                                                understand how to improve existing CNNs</p>
-                                            <p><a class="button button-primary button-wide-mobile"
-                                                    href="https://towardsdatascience.com/sesn-cec766026179">
-                                                    blogpost</a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2 bd-highlight"></div>
-
-                            <div class="flip-card">
-                                <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="src/images/JIP.jpeg" alt="JIP team" class="flip-image">
-                                    </div>
-                                    <div class="flip-card-back">
-                                        <p>Or this time when we translated a vision into a technological
-                                            roadmap</p>
-                                        <p><a class="button button-primary button-wide-mobile"
-                                                href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
-                                                blogpost</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="m-2 bd-highlight">
-                            <div class="flip-card">
-                                <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img class="flip-image" src="src/images/TU_Delft_lib.jpg">
-                                    </div>
-                                    <div class="flip-card-back">
-                                        <p>A few cool stuff I've done under my bachelors</p>
-                                        <p><a class="button button-primary button-wide-mobile"
-                                                href="https://github.com/vioSpark/BME-cool-part">
-                                                code</a></p>
-                                    </div>
-                                </div>
-                            </div>
+                        <div id="reading_projects" class="d-flex bd-highlight mb-3 flex-wrap">
+                            <!-- js fills the rest here -->
                         </div>
                     </div>
 
@@ -279,7 +139,10 @@
         crossorigin="anonymous"></script>
     <!-- scrollreveal animation -->
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
+    <!-- last bits of inherited mess -->
     <script src="src/js/main.min.js"></script>
+    <!-- Filling up projects -->
+    <script src="src/js/data_to_cards.js"></script>
 </body>
 
 </html>
